html pages updated

--- a/data/config.json
+++ b/data/config.json
@@ -1,11 +1,6 @@
 {
-
-"ssid":"e-lab innovations",
-
-"pass":"PASSWORD",
-
-"host":"mini-project-2020.firebaseio.com",
-
-"auth":"CAcal1aLzujuG5POT2PKt57qMWLd1iSt6aV9iVv6"
-
+   "auth": "CAcal1aLzujuG5POT2PKt57qMWLd1iSt6aV9iVv6",
+   "host": "mini-project-2020.firebaseio.com",
+   "pass": "PASSWORD",
+   "ssid": "e-lab innovations"
 }
